// ログインボーナス
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/loginBonus";

import "login_bonus_receive_request.proto";
import "login_bonus_receive_response.proto";

service LoginBonus {
  rpc Receive (LoginBonusReceiveRequest) returns (LoginBonusReceiveResponse);
}
